1999-01-05  Jonathan Blandford  <jrb@redhat.com>

	* gnome-dentry-edit.c (gnome_dentry_edit_new_notebook): Text change

Tue Jan 05 02:12:52 1999  George Lebl  <jirka@5z.com>

	* gnome-pixmap-entry.c,gnome-icon-entry.c: accept drops of
	  files on the image previews

Mon Jan 04 02:19:49 1999  George Lebl  <jirka@5z.com>

	* gnome-icon-sel.c: when scaling icons, makes sure they're at least
	  1 pixel tall, wide.

Mon Jan 04 01:10:14 1999  George Lebl  <jirka@5z.com>

	* gnome-icon-list.c: when appending or inserting imlib image
	  do a sanity check for NULL

	* gnome-icon-sel.c: if we can't clone the image, just ignore it

Sun Jan 03 17:57:52 1999  George Lebl  <jirka@5z.com>

	* gnome-file-entry.c: actually accept file drops of text/uri-list
	  there is still a problem of multiple files being dropped, I
	  just pick out the first one, is this the right solution?

1999-01-03  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-dock.[ch]: removed all traces of struct _GnomeDockChild.
	use GnomeDockBands directly instead, as drag_allocation is no
	longer needed.
	
Sat Jan  2 15:00:19 1999  Raph Levien  <raph@gimp.org>

	* gnome-canvas-line.c: Minor tweaks and tunes. The set_arg
	updates are more consistent, the width of the line is now
	set based on the items'affine transformation rather than
	the global pixels_per_unit.

Fri Jan  1 13:13:04 1999  Raph Levien  <raph@gimp.org>

	* gnome-canvas.c (gnome_canvas_group_get_arg): fixed a bug
	spotted by Centove: getting GROUP_ARG_Y was getting the X
	value.

1999-01-02  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-dock-item.c (gnome_dock_item_motion): don't subtract
	item->dragoff_? from pointer coordinates before emiting signal
	as this confuses gnome-dock.c/drag_check().
	* gnome-dock.c (drag_new, drag_to, drag_floating): subtract
	item->dragoff_? from pointer coordinates here instead in the
	above function.
	(drag_check): a small fix to handling drags in new bands.