@@ -1,3 +1,14 @@
+1999-01-06  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>
+
+	* gnome-client.c (gnome_client_get_flags): New function.  Returns
+ 	the client's flags.
+	(client_parse_func): Removed the setting of the master_client's
+ 	previous_id.
+	(gnome_client_connect): Sets the previous_id to the id, that was
+ 	tried to connect to the session manager.
+
+	* gnome-client.h (gnome_client_get_flags): New declaration.
+
 1999-01-05  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-dentry-edit.c (gnome_dentry_edit_new_notebook): Text change
